# python-app-example

./: .editorconfig  .gitignore  Dockerfile  Pipfile  README.md  auth.py  main.py  pyproject.toml
app/: main.py
